--- a/Overture.Web.API/appsettings.json
+++ b/Overture.Web.API/appsettings.json
@@ -1,19 +1,19 @@
 {
 	"MongoDB": {
-		"ConnectionString": "mongodb://pdelaplana:**Battlestar1@cluster0-shard-00-00-ebmbf.gcp.mongodb.net:27017,cluster0-shard-00-01-ebmbf.gcp.mongodb.net:27017,cluster0-shard-00-02-ebmbf.gcp.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true",
-		"Database": "overture"
+		"ConnectionString": "",
+		"Database": ""
 	},
 	"Auth0": {
-		"Domain": "snapquotes.auth0.com",
-		"Audience": "https://auth0.snapquotes.com",
-		"ClientId": "1a52CzhncXpQUw3ApXDiaCnCxqrKwFAu",
-		"ClientSecret": "K6w82v8_nBYO1xKRtvZbFtN41Vqa4jtCqrIpN8TSCkuIqkw7e9wIDK0QNcOMUQsg"
+		"Domain": "",
+		"Audience": "",
+		"ClientId": "",
+		"ClientSecret": ""
 	},
 	"Auth0ManagementApi": {
-		"Domain": "snapquotes.auth0.com",
-		"Audience": "https://snapquotes.auth0.com/api/v2/",
-		"ClientId": "BzZnvMgU3Q4l3jpW6wheorrueJE7riea",
-		"ClientSecret": "gOx1tWPfKvGs4a1ZUsNW_iCE9qwFymk4Hppp4fm_x0SThyuT7Lc8evJB6Qzd0q-5"
+		"Domain": "",
+		"Audience": "",
+		"ClientId": "",
+		"ClientSecret": ""
 	},
 	"Logging": {
 		"LogLevel": {
